Hotfix: modified styles.css to fix small bug when holding down on menu buttons on mobile devices.

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -222,6 +222,7 @@ body.mobile {
         height: fit-content; width: 100%;
 
         background-color: var(--bg-color-floating);
+        user-select: none;
 
         flex-direction: row;
         justify-content: space-between;
@@ -241,6 +242,7 @@ body.mobile {
                 height: 100%;
                 width: 100%;
                 display: block;
+                -webkit-user-drag: none;
 
                 filter: invert();
             }
